logic is updated